--- a/index.css
+++ b/index.css
@@ -1,8 +1,17 @@
-background{
-      background-color: black;
+body{
+    background-color: black;
 }
 
 div{
+    width: 400px;
+margin-top: 10%;
+margin-left: auto;
+margin-right: auto;
+font-size: large;
 
-    width: 50%;
+
+
+
 }
+
+
