--- a/index.css
+++ b/index.css
@@ -2,16 +2,27 @@ body{
     background-color: black;
 }
 
-div{
-    width: 400px;
-margin-top: 10%;
-margin-left: auto;
-margin-right: auto;
-font-size: large;
-
-
-
-
+.main{
+    margin-left: 40%;
+    margin-top: 10%;
+   font-size: large;
+align-items: center;
 }
+
+img{
+    margin-top: 20px;
+    margin: auto;
+    border-radius: 50%;
+}
+
+.second{
+    margin-left: 5%;
+    border-width: 30%;
+    border-color: aqua;
+    border-radius: 30%;
+}
+
+
+
 
 
