--- a/index.css
+++ b/index.css
@@ -3,26 +3,46 @@ body{
 }
 
 .main{
+    border-radius:10% ;
+    background-color: rgb(13, 10, 10);
+    width: 500px;
+    height: 60vh;
     margin-left: 40%;
     margin-top: 10%;
    font-size: large;
 align-items: center;
+padding-left: 5%;
+padding-top: 2%;
 }
 
 img{
     margin-top: 20px;
     margin: auto;
     border-radius: 50%;
+    margin-left: 10%;
 }
 
-.second{
-    margin-left: 5%;
-    border-width: 30%;
-    border-color: aqua;
-    border-radius: 30%;
+div{
+    margin-left: 5px;
+    margin-right: 10px;
+   padding-left: 20%;
+    width: 250px;
+    border-radius: 10%;
+    height: 3vh;
+ border-width: 20%;
+ 
+ font-size: 20px;
+ font-weight: bold;
+ padding-top: 10px;
+ background-color: rgb(84, 82, 82);
+   
 }
 
+h2{
 
+    margin-left: 10%;
+}
 
-
-
+h3{
+    margin-left: 10%;
+}
